change theme color

--- a/masters/en/mmai.html
+++ b/masters/en/mmai.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="../css/prog.css">
     <link rel="stylesheet" href="../css/superslides.css">
+    <link rel="stylesheet" href="mmai.css">
     <link rel="stylesheet" type="text/css" href="../css/jquery.fancybox.css" media="screen" />
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,300italic,500,400italic,500italic,700,700italic' rel='stylesheet'
     type='text/css'>
@@ -31,28 +32,28 @@
 
 </head>
 
-<body id="page-mmgt" data-spy="scroll" data-target="#scroll-nav" data-offset="640">
+<body id="page-mmai" data-spy="scroll" data-target="#scroll-nav" data-offset="640">
 
     <div id="scroll-dot" class="hidden-xs hidden-sm hidden-md">
         <nav class="col-sm-12" id="scroll-nav">
             <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="200">
                 <li>
-                    <a href="mmgt.html#section1" data-toggle="tooltip" data-placement="left" title="Message from Directors"></a>
+                    <a href="mmai.html#section1" data-toggle="tooltip" data-placement="left" title="Message from Directors"></a>
                 </li>
                 <li>
-                    <a href="mmgt.html#section2" data-toggle="tooltip" data-placement="left" title="About"></a>
+                    <a href="mmai.html#section2" data-toggle="tooltip" data-placement="left" title="About"></a>
                 </li>
                 <li>
-                    <a href="mmgt.html#section3" data-toggle="tooltip" data-placement="left" title="Curriculum"></a>
+                    <a href="mmai.html#section3" data-toggle="tooltip" data-placement="left" title="Curriculum"></a>
                 </li>
                 <li>
-                    <a href="mmgt.html#section4" data-toggle="tooltip" data-placement="left" title="Faculty & Staff"></a>
+                    <a href="mmai.html#section4" data-toggle="tooltip" data-placement="left" title="Faculty & Staff"></a>
                 </li>
                 <li>
-                    <a href="mmgt.html#section5" data-toggle="tooltip" data-placement="left" title="Admission Requirement"></a>
+                    <a href="mmai.html#section5" data-toggle="tooltip" data-placement="left" title="Admission Requirement"></a>
                 </li>
                 <li>
-                    <a href="mmgt.html#section6" data-toggle="tooltip" data-placement="left" title="FAQ"></a>
+                    <a href="mmai.html#section6" data-toggle="tooltip" data-placement="left" title="FAQ"></a>
                 </li>
             </ul>
         </nav>
@@ -74,12 +75,12 @@
                 <img src="../images/bg_mmgt.jpg" alt="MSocSc In Media Management">
                 <div class="container in-slide-content">
                     <p class="sub-title">POSTGRADUATE PROGRAMMES</p>
-                    <h2 class="ma-title mmgt"><span class="small-letters">MSocSc</span> in Media Management</h2>
+                    <h2 class="ma-title mmai"><span class="small-letters">MSocSc</span> in Media Management</h2>
                     <p class="slide-description">The programme is run jointly by the School of Communication and the School of Business. It aims to produce
                         graduates equipped with the general business, management skills and specialist knowledge to manage
                         media businesses.</p>
                     <a href="https://iss.hkbu.edu.hk/amsappl_pg/welcome.jsf" target="_blank">
-                        <button type="button" class="btn btn-msocsc">APPLY NOW</button>
+                        <button type="button" class="btn btn-mmai">APPLY NOW</button>
                     </a>
                 </div>
             </li>
@@ -89,7 +90,7 @@
                         <img src="../images/bg_mmgt.jpg" alt="MSocSc In Media Management" class="img-responsive">
 						<div class="container in-image-content">
 							<p class="sub-title">POSTGRADUATE PROGRAMMES</p>
-							<h2 class="ma-title mmgt"><span class="small-letters">MSocSc</span> in Media Management</h2>
+							<h2 class="ma-title mmai"><span class="small-letters">MSocSc</span> in Media Management</h2>
 						</div>
                         <div class="prog_in-slide-content">
 							<p class="slide-description">The programme is run jointly by the School of Communication and the School of Business. It aims to produce graduates equipped with the general business, management skills and specialist knowledge to manage media businesses.</p>
@@ -101,7 +102,7 @@
 	</div>
     <!-- END Banner -->
     <!-- Scroll down -->
-    <a href="mmgt.html#section1">
+    <a href="mmai.html#section1">
         <div class="scroll-down hidden-xs"></div>
     </a>
 
@@ -109,7 +110,7 @@
     <div id="section1" class="section hidden-xs">
         <div id="prog-Director" class="container row">
             <a href="https://iss.hkbu.edu.hk/amsappl_pg/welcome.jsf" target="_blank">
-                <div class="applynow_prog bg-mmgt">Apply NOW</div>
+                <div class="applynow_prog bg-mmai">Apply NOW</div>
             </a>
             <div id="photo-director" class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
             <img src="../images/staff/prof_raymond-li2.jpg" class="photo-director img-responsive">
@@ -179,7 +180,7 @@
     <div class="section" id="section3">
         <div id="prog-Curriculum" class="container row">
             <div class="block"><div class="block"><img src="../images/programmes/mmgt_curriculum.jpg" class="img-responsive Prog_Image">
-                <div class="curriculum_description curriculum_mmgt">
+                <div class="curriculum_description curriculum_mmai">
                     <h1 class="prog-title">Curriculum Design</h1>
                     <p>Taking effect from 2013/2014 intake, the Programme requires a minimum of 28 credit units of coursework
                         of which 12 credit units are from Core Courses, 12 units of Elective Courses, and 4 units of Application
@@ -211,7 +212,7 @@
                     <div class="item active">
 
                         <div class="container text-center">
-                            <h1 class="staff-title mmgt">Faculty & Staff</h1>
+                            <h1 class="staff-title mmai">Faculty & Staff</h1>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 profile">
                             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"><img src="../images/staff/profile_huang-yu.jpg" class="profile-image img-responsive">
@@ -314,7 +315,7 @@
                     <div class="item">
 
                         <div class="container text-center">
-                            <h1 class="staff-title mmgt">Faculty & Staff</h1>
+                            <h1 class="staff-title mmai">Faculty & Staff</h1>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 profile">
                             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"><img src="../images/staff/profile_clarence-chang.jpg" class="profile-image img-responsive">
@@ -418,7 +419,7 @@
                     <div class="item">
 
                         <div class="container text-center">
-                            <h1 class="staff-title mmgt">Faculty & Staff</h1>
+                            <h1 class="staff-title mmai">Faculty & Staff</h1>
                                                       </div>
                               <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 profile">
                                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"><img src="../images/staff/profile_ringo-ma.jpg" class="profile-image img-responsive">
@@ -514,7 +515,7 @@
                            </div>
                            <div class="item">
                               <div class="container text-center">
-                                 <h1 class="staff-title mmgt">Faculty & Staff</h1>
+                                 <h1 class="staff-title mmai">Faculty & Staff</h1>
                               </div>
                               <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 profile">
                                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"><img src="../images/staff/profile_dr-mena-wang.jpg" class="profile-image img-responsive">
@@ -600,8 +601,8 @@
 
 
                 <!-- Left and right controls -->
-                <a class="left carousel-control" href="mmgt.html#staff-data" role="button" data-slide="prev"></a>
-                <a class="right carousel-control" href="mmgt.html#staff-data" role="button" data-slide="next"></a>
+                <a class="left carousel-control" href="mmai.html#staff-data" role="button" data-slide="prev"></a>
+                <a class="right carousel-control" href="mmai.html#staff-data" role="button" data-slide="next"></a>
             </div>
         </div>
     </div>
@@ -611,7 +612,7 @@
     <div class="section" id="section5">
         <div id="prog-Admissions" class="container row">
             <div class="block"><img src="../images/programmes/mmgt_admission.jpg" class="img-responsive Prog_Image">
-                <div class="requirments_description Admissions_mmgt">
+                <div class="requirments_description Admissions_mmai">
                     <h1 class="prog-title">Admission Requirements</h1>
                     <p>The Programme will be of interest to the following students: Bachelor’s degree holders who are employed
                         in media organizations or in the communication functions of the public or private sector, or who
@@ -663,7 +664,7 @@
     <div class="section" id="section6">
         <div id="prog-FAQ" class="container row">
             <div class="block">
-                <div class="abtProg_faq prog_mmgt">
+                <div class="abtProg_faq prog_mmai">
                     <h1 class="prog-title">FAQ</h1>
                     <p class="question">1. How is this degree different from the MA in Communication? </p>
                     <p class="answer">The Media Management degree places much heavier emphasis on the “business” aspect of communication. Graduates
@@ -707,7 +708,7 @@
 
     <!-- Scroll to top -->
     <div class="scroll-up">
-        <a href="mmgt.html#page-mmgt"><i class="fa fa-angle-up"></i></a>
+        <a href="mmai.html#page-mmai"><i class="fa fa-angle-up"></i></a>
     </div>
     <!-- Scroll to top end-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
