--- a/masters/en/mmai.html
+++ b/masters/en/mmai.html
@@ -72,7 +72,7 @@
     <div id="top-slides">
         <ul class="slides-container">
             <li>
-                <img src="../images/bg_mmgt.jpg" alt="MSocSc In Media Management">
+                <img src="images/bg_mmai.JPG" alt="MSocSc In Media Management">
                 <div class="container in-slide-content">
                     <p class="sub-title">POSTGRADUATE PROGRAMMES</p>
                     <h2 class="ma-title mmai"><span class="small-letters">MSocSc</span> in Media Management</h2>
@@ -87,7 +87,7 @@
         </ul>
     </div>
 					<div class="row progheader">
-                        <img src="../images/bg_mmgt.jpg" alt="MSocSc In Media Management" class="img-responsive">
+                        <img src="images/bg_mmai2.JPG" alt="MSocSc In Media Management" class="img-responsive">
 						<div class="container in-image-content">
 							<p class="sub-title">POSTGRADUATE PROGRAMMES</p>
 							<h2 class="ma-title mmai"><span class="small-letters">MSocSc</span> in Media Management</h2>
@@ -148,7 +148,7 @@
 
     <div class="section" id="section2">
         <div id="prog-Programme" class="container row">
-            <div class="block"><img src="../images/programmes/mmgt_abt-prog.jpg" class="img-responsive Prog_Image">
+            <div class="block"><img src="images/programmes/about_median.JPG" class="img-responsive Prog_Image">
                 <div class="abtProg_description #fp-nav">
                     <h1 class="prog-title">About This Programme</h1>
                     <p>The Programme, entitled “Master of Social Sciences in Media Management”, is jointly offered by the School
@@ -168,9 +168,9 @@
                         lay a foundation for those interested in further advanced studies in media or management.
                     </p>
                 </div>
-                <div class="abtProg_hImage hidden-xs hidden-sm"><img src="../images/programmes/img_las-vegas-study-tour.jpg">
+                <div class="abtProg_hImage hidden-xs hidden-sm"><img src="images/programmes/about1.jpg">
                 </div>
-                <div class="abtProg_vImage hidden-xs hidden-sm"><img src="../images/programmes/img_mmgt2.jpg">
+                <div class="abtProg_vImage hidden-xs hidden-sm"><img src="images/programmes/about2.jpg">
                 </div>
             </div>
         </div>
@@ -179,7 +179,7 @@
 
     <div class="section" id="section3">
         <div id="prog-Curriculum" class="container row">
-            <div class="block"><div class="block"><img src="../images/programmes/mmgt_curriculum.jpg" class="img-responsive Prog_Image">
+            <div class="block"><div class="block"><img src="images/programmes/design.JPG" class="img-responsive Prog_Image">
                 <div class="curriculum_description curriculum_mmai">
                     <h1 class="prog-title">Curriculum Design</h1>
                     <p>Taking effect from 2013/2014 intake, the Programme requires a minimum of 28 credit units of coursework
@@ -191,9 +191,9 @@
                         <div class="external-url">Browse Course Structure</div>
                     </a>
                 </div>
-                <div class="curriculum_hImage hidden-xs hidden-sm"><img src="../images/programmes/img_cambodia-study-tour.jpg">
+                <div class="curriculum_hImage hidden-xs hidden-sm"><img src="images/programmes/cur1.JPG">
                 </div>
-                <div class="curriculum_vImage hidden-xs hidden-sm"><img src="../images/programmes/img_japan-study-tour.jpg">
+                <div class="curriculum_vImage hidden-xs hidden-sm"><img src="images/programmes/cur2.jpg">
                 </div>
             </div>
         </div>
@@ -611,7 +611,7 @@
 
     <div class="section" id="section5">
         <div id="prog-Admissions" class="container row">
-            <div class="block"><img src="../images/programmes/mmgt_admission.jpg" class="img-responsive Prog_Image">
+            <div class="block"><img src="images/programmes/ad_median.jpg" class="img-responsive Prog_Image">
                 <div class="requirments_description Admissions_mmai">
                     <h1 class="prog-title">Admission Requirements</h1>
                     <p>The Programme will be of interest to the following students: Bachelor’s degree holders who are employed
@@ -652,9 +652,9 @@
                     </a>
 
                 </div>
-                <div class="requirments_hImage hidden-xs hidden-sm"><img src="../images/programmes/img_dm-workshop.jpg">
+                <div class="requirments_hImage hidden-xs hidden-sm"><img src="images/programmes/ad2.jpg">
                 </div>
-                <div class="requirments_vImage hidden-xs hidden-sm"><img src="../images/programmes/img_distinguish-speaker.jpg">
+                <div class="requirments_vImage hidden-xs hidden-sm"><img src="images/programmes/ad1.JPG">
                 </div>
             </div>
         </div>
