add text admission

--- a/masters/en/mmai.html
+++ b/masters/en/mmai.html
@@ -75,10 +75,8 @@
                 <img src="images/bg_mmai.JPG" alt="MSocSc In Media Management">
                 <div class="container in-slide-content">
                     <p class="sub-title">POSTGRADUATE PROGRAMMES</p>
-                    <h2 class="ma-title mmai"><span class="small-letters">MSocSc</span> in Media Management</h2>
-                    <p class="slide-description">The programme is run jointly by the School of Communication and the School of Business. It aims to produce
-                        graduates equipped with the general business, management skills and specialist knowledge to manage
-                        media businesses.</p>
+                    <h2 class="ma-title mmai"><span class="small-letters">MSC</span> IN AI AND DIGITAL MEDIA</h2>
+                    <p class="slide-description"></p>
                     <a href="https://iss.hkbu.edu.hk/amsappl_pg/welcome.jsf" target="_blank">
                         <button type="button" class="btn btn-mmai">APPLY NOW</button>
                     </a>
@@ -90,10 +88,10 @@
                         <img src="images/bg_mmai2.JPG" alt="MSocSc In Media Management" class="img-responsive">
 						<div class="container in-image-content">
 							<p class="sub-title">POSTGRADUATE PROGRAMMES</p>
-							<h2 class="ma-title mmai"><span class="small-letters">MSocSc</span> in Media Management</h2>
+							<h2 class="ma-title mmai"><span class="small-letters">MSC</span> IN AI AND DIGITAL MEDIA</h2>
 						</div>
                         <div class="prog_in-slide-content">
-							<p class="slide-description">The programme is run jointly by the School of Communication and the School of Business. It aims to produce graduates equipped with the general business, management skills and specialist knowledge to manage media businesses.</p>
+							<p class="slide-description"></p>
 							<a href="https://iss.hkbu.edu.hk/amsappl_pg/welcome.jsf" target="_blank">
 								<button type="button" class="btn btn-prog">APPLY NOW</button>
 							</a>
@@ -113,34 +111,31 @@
                 <div class="applynow_prog bg-mmai">Apply NOW</div>
             </a>
             <div id="photo-director" class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-            <img src="../images/staff/prof_raymond-li2.jpg" class="photo-director img-responsive">
-            <img src="../images/staff/asso_chen-terri2.jpg" class="photo-director img-responsive">
-            <img src="../images/staff/asso_gerard-prend.jpg" class="photo-director img-responsive">
+            <img src="../images/staff/profile_zhang-xinzhi.jpg" class="photo-director img-responsive">
+            <img src="../images/staff/profile_li-chen.jpg" class="photo-director img-responsive">
+            <!-- <img src="../images/staff/asso_gerard-prend.jpg" class="photo-director img-responsive"> -->
             </div>
             <div id="message-directors" class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
                 <h1 class="prog-title-bk">Message From Directors</h1>
                 <p>Dear students,</p>
-                <p>Congratulations to you on the acceptance to the largest School of Communication in Hong Kong. I am especially
-                    thrilled that you have decided to pursue an MA in Media Management, a program dedicated to cultivate
-                    your talents and enable you to become leaders in the media industries. This one-year intensive program
-                    can be both exciting and challenging. You will meet fellow students, your instructors, and diverse groups
-                    of interesting people, experience the fast-paced urban life and the beautiful terrains of Hong Kong,
-                    and embark on horizon-broadening study tours outside the territory.</p>
-                <p>At the same time, you quickly will sense that you are entering unfamiliar territories of academic learning
-                    and having to make adjustments to unaccustomed life styles. Your major, Media Management, encompasses
-                    courses relevant to various forms of mass media, of which you already have some knowledge, and courses
-                    that cover management principles and practices, in which most of you may not have much experience. The
-                    latter probably requires that you exert greater fortitude and more effort. Through unwavering determination
-                    and hard work, you will tell yourself in the end that all you have done is worth it.</p>
-                <p>I welcome you and look forward to seeing you on campus, chatting with you, and sharing our stories with each
-                    other. Enjoy your life here at Hong Kong Baptist University.</p>
+                <p>Artificial intelligence (AI), which refers to computer systems that are able to perform tasks that could once only be done by humans, is revolutionizing our whole way of life, but it is having a particularly deep effect on the landscape of the digital media industry, changing it in every aspect. AI technologies are appearing in computational journalism, computer-assisted editorial judgement, multimedia processing, machine learning, recommender systems, search engines, immersive media, social media bots, robot reporters, and automated content-generation and -promotion systems. AI is even changing audience behavior. </p>
+                <p>Digitization has brought us interactive social media and portable communication devices that allow ordinary users to provide content themselves in an informal way, but as media professionals start using the disruptive technologies of AI to locate, acquire and process material for news investigation and storytelling, audiences are becoming an integral part of the content generation process. The interplay between human and machine is shaping both sets of actors simultaneously. Critical reflection on the legal, moral and ethical issues of these developments has also come to the fore, with growing concerns about fake news and misinformation, algorithm-driven audience polarization, privacy protection, the surveillance society, news professionalism and the ever-enlarging knowledge gap and digital divide. </p>
+                <p>This MSc in AI and Digital Media is Hong Kong’s first full-fledged interdisciplinary taught postgraduate programme focusing on the application of big data analytics and AI for media and communication. The Programme is offered by the School of Communication and supported by the Department of Computer Science at the Faculty of Science, Hong Kong Baptist University. The School of Communication was originally founded in 1968. It provides a comprehensive range of programmes in communication available in Hong Kong at the undergraduate and postgraduate level. It is one of the important journalism education bases in Hong Kong. The Department of Computer Science under the Faculty of Science has been around for almost three decades. The Department is particularly strong in the areas of Databases, Computational Intelligence, Pattern Recognition, Machine Learning and Networking.</p>
+                <p>The new programme is expected to facilitate more teaching and research so that AI can serve the social good in a broader sense, bringing it to bear on well-being, e-health, smart city, cultural preservation and cultural diversity. </p>
+                <p>Welcome to join us!</p>
                 <br>
-                <p>Mr. Raymond Li
-                    <br> Programme Director</p>
-                <p>Dr. Terri Chan
-                    <br> Associate Director</p>
-                <p>Prof. Gerard Paul Prendergast
-                    <br> Associate Director</p>
+                <p>Dr. Xinzhi ZHANG
+                    <br> Research Assistant Professor, 
+                    <br> Director of MSc in AI and Digital Media, School of Communication, 
+                    <br> Director of Data and Media Communication, BSoSc (Hons) in Communication, 
+                    <br> Department of Journalism, School of Communication
+                </p>
+                <p>Dr. Li CHEN
+                    <br> Associate Professor, 
+                    <br> Director of MSc in AI and Digital Media, School of Communication, 
+                    <br> Concentration Coordinator of Data and Media Communication, BSc (Hons) in Computer Science
+                    <br> Department of Computer Science, Faculty of Science
+                </p>
             </div>
         </div>
     </div>
@@ -425,7 +420,7 @@
                                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"><img src="../images/staff/profile_ringo-ma.jpg" class="profile-image img-responsive">
                                  </div>
                                  <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 profile-desc">
-                                    <h5>><a href="http://staffweb.hkbu.edu.hk/ringoma/" target="_blank">Prof. Ringo C.L. MA</a></h5>
+                                    <h5><a href="http://staffweb.hkbu.edu.hk/ringoma/" target="_blank">Prof. Ringo C.L. MA</a></h5>
                                     <p class="staff-post">Professor, Department of Communication Studies</p>
                                     <p class="staff-details">E: <a href="mailto:ringoma@hkbu.edu.hk">ringoma@hkbu.edu.hk</a></p>
                                     <p class="staff-details">T: (852) 3411 7483</p>
@@ -614,38 +609,41 @@
             <div class="block"><img src="images/programmes/ad_median.jpg" class="img-responsive Prog_Image">
                 <div class="requirments_description Admissions_mmai">
                     <h1 class="prog-title">Admission Requirements</h1>
-                    <p>The Programme will be of interest to the following students: Bachelor’s degree holders who are employed
-                        in media organizations or in the communication functions of the public or private sector, or who
-                        aspire to such positions, and who see the in-depth understanding of media industries and management
-                        as contributory to executive leadership in their career and in the society.</p>
-                    <p>To qualify for Admissions applicants must meet the following requirements:
+                    <p>Applicants should normally:
                         <br>
-                        <li>having a Bachelor’s degree from a recognized university or comparable institution;
-                            <br>
-                        </li>
-                        <li>Applicants whose first degree is obtained from an institution where the medium of instruction is
-                            not English should fulfill the following minimum English proficiency requirement:
-                            <br>
-                        </li>
                         <ol>
-                            <li class="list-alphabet">TOEFL score 550 (paper-based test) or 213 (computer-based test) or 79 (internet-based test);
-                                or
-                                <br>
-                            </li>
-                            <li class="list-alphabet">Overall band 6.5 in International English Language Testing System (IELTS)</li>
-                        </ol>
-                        <li>professional experience would be preferred
+                        <li class="list-alphabet">Possess a Bachelor's degree in science, engineering, business or other relevant fields from a recognized university or equivalent qualification; and
                             <br>
                         </li>
-                        <li>being able to show evidence in academic achievement and aptitude.</li><br>
-     We adopt a rolling admission policy and open a window for application from mid-November to end- June (usually having First Round November – January; Second Round February – June). It may be to your advantage to apply as early as possible, as the window may close earlier when all spots are filled.<br><br> If short-listed, applicants may be interviewed by the School of Communication.                   
-                        
+                        <li class="list-alphabet">If applicants did not use English as the medium of learning in their Bachelor’s degree programmes, they should satisfy any one of the following English proficiency requirements:
+                            <br>
+                            <ol>
+                                <li> An IELTS overall band score of at least 6.0;
+                                    <br>
+                                </li>
+                                <li > A TOEFL score of at least 537 (paper-based) or 74 (Internet-based);</li>
+                                <li> Other equivalent qualifications (e.g. CET-6 score of at least 450, CEFR level C1 or above)</li>
+                            </ol>
+                        </li>
+                        <li class="list-alphabet">Submit a 500-word letter of interest in English; 
+                            <br>
+                        </li>
+                        <li class="list-alphabet">Submit work portfolio (publications, demonstration, GitHub repositories, personal websites), if any; 
+                            <br>
+                        </li>
+                        <li class="list-alphabet">Other qualifications and awards, if any; 
+                            <br>
+                        </li>
+                        <li class="list-alphabet">Two reference letters.
+                            <br>
+                        </li>
+                        </ol>
                     </p>
-                    <p class="content-sub-title">Duration of Study</p>
+                    <!-- <p class="content-sub-title">Duration of Study</p>
                     <p>The programme can be taken on a full-time basis in one year or on a part-time basis in two years. The
-                        maximum lengths allowed for full-time and part-time mode are 24 and 36 months respectively.</p>
+                        maximum lengths allowed for full-time and part-time mode are 24 and 36 months respectively.</p> -->
                     <p class="content-sub-title">Tuition Fee</p>
-                    <p>HK$145,000 (per year for one-year full time student)
+                    <p> HK$145,000 (per year for one-year full time student)
                         <br> HK$60,000 (per year for two-year part time student) (local Hong Kong students only)</p>
                     <a href="info/application.html" target="_blank" class="fancybox fancybox.iframe">
                         <div class="external-url">More Information</div>
