--- a/masters/en/mmai.html
+++ b/masters/en/mmai.html
@@ -664,33 +664,21 @@
             <div class="block">
                 <div class="abtProg_faq prog_mmai">
                     <h1 class="prog-title">FAQ</h1>
-                    <p class="question">1. How is this degree different from the MA in Communication? </p>
-                    <p class="answer">The Media Management degree places much heavier emphasis on the “business” aspect of communication. Graduates
-                        are expected to build or advance careers in the management rather than the editorial section of the
-                        media industry, although training in the programme is not restricted to media operation.</p>
-                    <p class="question">2. My English is only passable. Is that a problem?</p>
-                    <p class="answer">The main medium of class instruction is English, with very limited Cantonese and Putonghua as auxiliary
-                        devices. Although proof of English proficiency is not a necessary condition for Admissions, applicants
-                        whose English is weak will find it difficult to understand lecturer, complete required reading materials
-                        in time and complete assignments and term papers. Therefore, a good command of English is a plus
-                        in our Admissions considerations.</p>
-                    <p class="question">3. What is my career prospect?</p>
-                    <p class="answer">Graduates of this programme are expected to build careers in media, corporate, and other commercial industries
-                        as well as educational and government institutions.</p>
-                    <p class="question">4. Do I need to apply for a student visa? </p>
-                    <p class="answer">The Immigration Department of Hong Kong Special Administrative Region (SAR) requires all full-time non-local
-                        students to obtain a student visa in order to study in Hong Kong. Applications should normally be
-                        submitted at least two months in advance. Part-time non-local students must have an appropriate and
-                        valid visa to prove their eligibility to stay and study in Hong Kong.</p>
-                    <p class="question">5. Can I work in Hong Kong on a student visa?</p>
-                    <p class="answer">Students can work on campus up to 20 hours per week and are allowed to have short-term internships while
-                        studying. Students may also work in the summer and the Hong Kong government allows students to spend
-                        one year working in Hong Kong after graduation without a work visa. <a href="http://www.immd.gov.hk/eng/services/visas/study.html#lastTab"
-                        target="_blank">See government regulations here.</a>
-                    </p>
-                    <p class="question">6. Do you offer scholarships?</p>
-                    <p class="answer">Merit-based scholarships will be awarded in the second semester to students with outstanding academic
-                        performance in the first semester. Awarded students receive between HK$10,000 and $20,000.</p>
+                    <p class="question">1. Do you offer scholarships? </p>
+                    <p class="answer">Merit-based scholarships will be awarded in the second semester to students with outstanding academic performance in the first semester. Awarded students receive between HK$10,000 and $20,000.</p>
+                    <p class="question">2. Can I live on campus?</p>
+                    <p class="answer">The student halls are not available to post-graduate students, but there is a private on-campus dorm called the <a href="http://sass.hkbu.edu.hk/sass/ntt/guests/eng/" target="blank">NTT International House</a> that some students like to stay in. <a target="blank" href="https://sa.hkbu.edu.hk/sas">Most students find private housing off campus </a>.</p>
+                    <p class="question">3. What is Hong Kong like?</p>
+                    <p class="answer">Hong Kong is a dynamic, international 24-hour city that is full of people, cultural events and food from all over the world. Cantonese is the main language but English is also widely used. Hong Kong is one of the safest cities in the world, is an excellent travel hub for exploring the rest of Asia and has a large variety of outdoor activities and tourist attractions. People love living in the city for its vibrancy and endless list of things to do.</p>
+                    <p class="question">4. Is a dissertation required?</p>
+                    <p class="answer">No. We recommend disserations only for students interested in pursuing further studies.</p>
+                    <p class="question">5. Do I need to speak Chinese to enroll in your programme?</p>
+                    <p class="answer">Not at all! The programme is taught 100 per cent in English. And if you want to learn Cantonese or Putonghua, there are many opportunities to study.</p>
+                    <p class="question">6. Can I work in Hong Kong on a student visa?</p>
+                    <p class="answer">Students can work on campus up to 20 hours per week and are allowed to have short-term internships while studying. Students may also work in the summer and the Hong Kong government allows students to spend one year working in Hong Kong after graduation without a work visa. See <a href="https://www.immd.gov.hk/eng/services/visas/study.html#lastTab" target="blank">government regulations here</a>.</p>
+                    <p class="question">7. Does tuition include health insurance?</p>
+                    <p class="answer">Yes. We have committed a substantial subsidy for all students of the progamme to enjoy the same privileges and services as those of UGC-funded programmes at the University Health Clinic.</p>
+                
                 </div>
             </div>
         </div>
